k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: homing-ingress
  namespace: homing

spec:
  ingressClassName: nginx

  rules:
  - host: homing.local
    http:
      paths:
        - path: /v1
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8000

        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
